# hammerhead-bench

./: .env.example  .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
harness/: __init__.py  aggregate.py  clab.py  cli.py  memory.py  peak_rss.py  pipeline.py  render.py  topology.py
harness/adapters/: __init__.py  base.py  bridge.py  ceos.py  crpd.py  frr.py  srlinux.py  xrd.py
harness/diff/: __init__.py  engine.py  metrics.py
harness/extract/: __init__.py  convergence.py  fib.py
harness/report/: __init__.py  data.py  html.py  markdown.py  plots.py
harness/tools/: __init__.py  batfish.py  hammerhead.py  hammerhead_transform.py
results/: CHANGELOG.md
scripts/: bench_one_by_one.sh  fake_hammerhead.sh  generate_acl.py  preflight.py
shared_templates/: macros.j2
tests/: test_aggregate.py  test_batfish.py  test_bench_hooks.py  test_ceos_adapter.py  test_cli_bench.py  test_diff.py  test_frr_only_truth.py  test_frr_parse.py  test_hammerhead.py  test_hammerhead_transform.py  test_hardening.py  test_memory_guards.py  test_normalize.py  test_peak_rss.py  test_pipeline_dry.py  test_report.py  test_sim_only_trials.py  test_topology_render.py
tools/: diagnose_empty_bf.py  run_variance.py
topologies/_shared/: __init__.py  fat_tree.py  spine_leaf.py
topologies/acl-heavy-parse/: README.md  topo.py
topologies/acl-semantics-3node/: README.md  topo.py
topologies/bgp-ebgp-2node/: README.md  topo.py
topologies/bgp-ibgp-2node/: README.md  topo.py
topologies/fat-tree-k64/: README.md  topo.py
topologies/hub-spoke-wan-51node/: README.md  topo.py
(+46 files in other folders)
