[project]
name = "hammerhead-bench"
version = "0.1.0"
description = "Reproducible benchmark comparing Hammerhead vs Batfish vs vendor ground truth"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Hammerhead Bench Authors" }]
license = { text = "Apache-2.0" }
dependencies = [
    "pybatfish>=2024.0",
    "psutil>=5.9",
    "ijson>=3.2",
    "jinja2>=3.1",
    "pydantic>=2.6",
    "rich>=13.7",
    "plotly>=5.19",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
hammerhead-bench = "harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "slow: tests that take more than a few seconds",
    "docker: tests that require docker",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]
